--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue2-editor": "^2.8.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
